--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "file-saver": "^2.0.5",
     "flowbite-react": "^0.7.2",
     "next": "14.1.0",
     "react": "^18",
